force-app/main/default/objects/Contract/fields/Lead_Negotiator_VR__c.field-meta.xml
<CustomField>
    <fullName>Lead_Negotiator_VR__c</fullName>
    <formula>Opportunity__r.Lead_Negotiator_VR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The lead negotiator for VR pulled directly from the role on the Opportunity Team</inlineHelpText>
    <label>Lead Negotiator VR</label>
    <type>Text</type>
</CustomField>