force-app/main/default/objects/Contract/fields/Lease_Deed_Variation__c.field-meta.xml
<CustomField>
    <fullName>Lease_Deed_Variation__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <inlineHelpText>Enter the variations to the Leasebook that will appear on the lease deed</inlineHelpText>
    <label>Lease Deed Variation</label>
    <length>24576</length>
    <type>LongTextArea</type>
</CustomField>