force-app/main/default/objects/Contract/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <formula>TEXT( Opportunity__r.Lease_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lease Type is pulled from the corresponding opportunity</inlineHelpText>
    <label>Lease Type</label>
    <type>Text</type>
</CustomField>