force-app/main/default/objects/Contract/fields/Leasebook__c.field-meta.xml
<CustomField>
    <fullName>Leasebook__c</fullName>
    <inlineHelpText>Enter the identifier of the leasebook being used for this lease</inlineHelpText>
    <label>Leasebook</label>
    <length>3</length>
    <type>Text</type>
</CustomField>