force-app/main/default/objects/Contract/fields/Legal_Costs__c.field-meta.xml
<CustomField>
    <fullName>Legal_Costs__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the legal costs payable by the tenant on completion</inlineHelpText>
    <label>Legal Costs</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>