force-app/main/default/objects/Contract/fields/Legal_Costs_Clause__c.field-meta.xml
<CustomField>
    <fullName>Legal_Costs_Clause__c</fullName>
    <inlineHelpText>Describe the legal costs if applicable</inlineHelpText>
    <label>Legal Costs Clause</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>