force-app/main/default/objects/Contract/fields/LFDA_Fee__c.field-meta.xml
<CustomField>
    <fullName>LFDA_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the fitting out and drawings fee payable towards the Landlords initial costs of approving the Tenant&apos;s fit out</inlineHelpText>
    <label>LFDA Fee</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>