force-app/main/default/objects/Contract/fields/LFDA_Fee_Clause__c.field-meta.xml
<CustomField>
    <fullName>LFDA_Fee_Clause__c</fullName>
    <inlineHelpText>Describe the landlords fit out drawings fee details if applicable</inlineHelpText>
    <label>LFDA Fee Clause</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>