force-app/main/default/objects/Contract/fields/Licence_Fee_Clause__c.field-meta.xml
<CustomField>
    <fullName>Licence_Fee_Clause__c</fullName>
    <inlineHelpText>Enter the details of the licence fee if applicable</inlineHelpText>
    <label>Licence Fee Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>