force-app/main/default/objects/Contract/fields/Maintenance_Clause__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Clause__c</fullName>
    <inlineHelpText>Enter the maintenance period arrangements</inlineHelpText>
    <label>Maintenance Clause</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>