force-app/main/default/objects/Contract/fields/Maintenance_Period_years__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Period_years__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Enter the minimum number of years the tenant will undertake to fully refit the unit</inlineHelpText>
    <label>Maintenance Period (years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>