force-app/main/default/objects/Contract/fields/Management_Fee_Clause__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Clause__c</fullName>
    <inlineHelpText>Describe how the management fee will be levied for the duration of the lease</inlineHelpText>
    <label>Management Fee Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>