force-app/main/default/objects/Contract/fields/Market_Position__c.field-meta.xml
<CustomField>
    <fullName>Market_Position__c</fullName>
    <formula>TEXT(  Account.Market_Position__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Market Segment is derived from the account record</inlineHelpText>
    <label>Market Position</label>
    <type>Text</type>
</CustomField>