force-app/main/default/objects/Contract/fields/MRI_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the MRI lease identifier when known</inlineHelpText>
    <label>MRI ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>