force-app/main/default/objects/Contract/fields/MRI_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>MRI_Updated_On__c</fullName>
    <inlineHelpText>Enter the date that contract detail was entered on MRI</inlineHelpText>
    <label>MRI Updated On</label>
    <type>Date</type>
</CustomField>