force-app/main/default/objects/Contract/fields/Next_Financial_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Next_Financial_Year_End__c</fullName>
    <formula>IF( Ye0__c  &gt;  TODAY() ,  Ye0__c ,  Ye1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated next financial year end date based on the date today and the 1st Financial Year end date</inlineHelpText>
    <label>Next Financial Year End</label>
    <type>Date</type>
</CustomField>