force-app/main/default/objects/Contract/fields/Non_Compete_Distance__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Distance__c</fullName>
    <inlineHelpText>Enter the distance to be used in the Non Compete Clause for this Contract</inlineHelpText>
    <label>Non Compete Distance</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>