force-app/main/default/objects/Contract/fields/Non_Compete_Map__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Map__c</fullName>
    <formula>IMAGE(  ( Image_Link_Prefix__c  &amp;  Image_Link__c  ) , &quot;Non Compete Map&quot; , 450, 550)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Non Compete Map</inlineHelpText>
    <label>Non Compete Map</label>
    <type>Text</type>
</CustomField>