force-app/main/default/objects/Contract/fields/Notice_Period_months__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_months__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Enter the number of months notice the landlord may give the tenant</inlineHelpText>
    <label>Notice Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>