force-app/main/default/objects/Contract/fields/Notional_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Notional_Base_Rent__c</fullName>
    <inlineHelpText>Enter the notional value per unit of GEA based on the size metric to be used to calculate deposit amounts, the actual base rent amount appears on the term increments and will vary annually based on the terms of the lease</inlineHelpText>
    <label>Notional Base Rent</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>