force-app/main/default/objects/Contract/fields/Notional_Size__c.field-meta.xml
<CustomField>
    <fullName>Notional_Size__c</fullName>
    <inlineHelpText>Use this field if we&apos;ve agreed a notional amount of space with a brand but have not yet allocated a specific unit, this will then be used in any calculations</inlineHelpText>
    <label>Ideal Size</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>