force-app/main/default/objects/Contract/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <inlineHelpText>Select the appropriate offer status for this lease</inlineHelpText>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Suggested / Planned</fullName>
            </value>
            <value>
                <fullName>Unit Offered</fullName>
            </value>
            <value>
                <fullName>Unit Reserved</fullName>
            </value>
            <value>
                <fullName>Terms Proposed</fullName>
            </value>
            <value>
                <fullName>HoT Signed</fullName>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Out for Brand Comment</fullName>
            </value>
            <value>
                <fullName>Awaiting Instruction</fullName>
            </value>
            <value>
                <fullName>Contract out for Signature</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>