force-app/main/default/objects/Contract/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The stage the opportunity has reached in the remerchandising process pulled from the related opportunity</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>