force-app/main/default/objects/Contract/fields/Payback_on_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Payback_on_Relocation__c</fullName>
    <inlineHelpText>Describe the payback or repayment terms in the event of a relocation</inlineHelpText>
    <label>Payback on Relocation</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>