force-app/main/default/objects/Contract/fields/Payback_Period__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the Payback period in Years</inlineHelpText>
    <label>Payback Period</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>