force-app/main/default/objects/Contract/fields/Permitted_Use__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use__c</fullName>
    <inlineHelpText>Enter the details of the permitted use for this brand in this lease</inlineHelpText>
    <label>Permitted Use</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>