force-app/main/default/objects/Contract/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>Opportunity__r.Unit__r.Phase_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The village phase when this unit was created</inlineHelpText>
    <label>Phase</label>
    <type>Text</type>
</CustomField>