force-app/main/default/objects/Contract/fields/Position_Rating__c.field-meta.xml
<CustomField>
    <fullName>Position_Rating__c</fullName>
    <formula>Opportunity__r.Position_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Position rating is derived from the opportunity record</inlineHelpText>
    <label>Position Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>