force-app/main/default/objects/Contract/fields/President__c.field-meta.xml
<CustomField>
    <fullName>President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Village President who will be approving the terms and signing the lease</inlineHelpText>
    <label>President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>