force-app/main/default/objects/Contract/fields/Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Point__c</fullName>
    <formula>TEXT( Account.Price_Point__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price Point is dervied from the account record</inlineHelpText>
    <label>Price Point</label>
    <type>Text</type>
</CustomField>