force-app/main/default/objects/Contract/fields/Projected_Income__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income__c</fullName>
    <formula>Opportunity__r.Projected_Income_v1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The projected income retrieved from the opportunity</inlineHelpText>
    <label>Projected Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>