force-app/main/default/objects/Contract/fields/Projected_Income_Yield__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Yield__c</fullName>
    <formula>Opportunity__r.Projected_Income_Yield_v1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected Income Yield pulled from the corresonding Opportunity</inlineHelpText>
    <label>Projected Income Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>