force-app/main/default/objects/Contract/fields/Projected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales__c</fullName>
    <formula>Opportunity__r.Projected_Sales_v1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The projected sales retrieved from the corresponding opportunity</inlineHelpText>
    <label>Projected Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>