force-app/main/default/objects/Contract/fields/Projected_Yield__c.field-meta.xml
<CustomField>
    <fullName>Projected_Yield__c</fullName>
    <formula>Opportunity__r.Projected_Yield_v1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected Sales Yield derived from the corresponding Opportunity</inlineHelpText>
    <label>Projected Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>