force-app/main/default/objects/Contract/fields/Proportion__c.field-meta.xml
<CustomField>
    <fullName>Proportion__c</fullName>
    <formula>Opportunity__r.Unit__r.Proportion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the percentage of the total village GEA that this lease will occupy</inlineHelpText>
    <label>Proportion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>