force-app/main/default/objects/Contract/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Village__r.Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Region pulled from the Village object</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>