force-app/main/default/objects/Contract/fields/Repayment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Terms__c</fullName>
    <inlineHelpText>Enter the repayment terms to be applied to this lease/contract in the event of early termination by the landlord, specifically in the first 3 years</inlineHelpText>
    <label>Repayment Terms</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>