force-app/main/default/objects/Contract/fields/Sales_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rating__c</fullName>
    <formula>Opportunity__r.Sales_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Rating is derived from the opportunity record</inlineHelpText>
    <label>Sales Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>