force-app/main/default/objects/Contract/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <formula>IF(ISPICKVAL( Size_Metric__c , &quot;sq.m&quot;),  Service_Charge__c *   Size_sqm__c , Service_Charge__c *    Size_sqft__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>