force-app/main/default/objects/Contract/fields/Security_Deposit_Total__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the total amount of security deposit required if this cannot be calculated from base rent and deposit period</inlineHelpText>
    <label>Security Deposit Total</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>