force-app/main/default/objects/Contract/fields/Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the amount per village metric per month the Tenant will pay to the landlord for the provision of common services e.g. maintenance, cleaning, insurance, security &amp; centralised marketing at least for the 1st year</inlineHelpText>
    <label>Service Charge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>