force-app/main/default/objects/Contract/fields/Service_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Amount__c</fullName>
    <formula>(  SC__c  *  CB_Factor__c  )  /  BF_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of the Management Fee/Service Charge based on the billing frequency</inlineHelpText>
    <label>Service Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>