force-app/main/default/objects/Contract/fields/Service_Charge_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Bill_To__c</fullName>
    <inlineHelpText>Enter the date that the service charge will be billed to on completion</inlineHelpText>
    <label>Service Charge Bill To</label>
    <type>Date</type>
</CustomField>