force-app/main/default/objects/Contract/fields/Service_Charge_Days__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Days__c</fullName>
    <formula>(  Service_Charge_Bill_To__c  -  Service_Charge_Payable_From__c  )  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Charge Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>