force-app/main/default/objects/Contract/fields/Service_Charge_Fee_Basis__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Fee_Basis__c</fullName>
    <inlineHelpText>Select the unit area measurement to be used to calculate Management Fee/Service Charge and Insurance fees</inlineHelpText>
    <label>Service Charge Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GEA</fullName>
            </value>
            <value>
                <fullName>GIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>