force-app/main/default/objects/Contract/fields/Service_Charge_on_Completion__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_on_Completion__c</fullName>
    <formula>( Service_Charge_Amount__c  /  Service_Charge_Qtr_Days__c  )  *  Service_Charge_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The service charge or management fee payable on exchange</inlineHelpText>
    <label>Service Charge on Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>