force-app/main/default/objects/Contract/fields/Service_Charge_Payable_From__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Payable_From__c</fullName>
    <inlineHelpText>Select the date that the Management fee or Service Charge is payable from</inlineHelpText>
    <label>Service Charge Payable From</label>
    <type>Date</type>
</CustomField>