force-app/main/default/objects/Contract/fields/Service_Charge_Qtr_Days__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Qtr_Days__c</fullName>
    <formula>(  Service_Charge_Bill_To__c - ( DATE ( YEAR (  Service_Charge_Bill_To__c ) ,( MONTH(  Service_Charge_Bill_To__c ) - 2), 01) ) ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Charge Qtr Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>