force-app/main/default/objects/Contract/fields/Shop_fit_cap__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_cap__c</fullName>
    <inlineHelpText>Enter the amount per village metric to cap the shop fit contribution amount if relevant</inlineHelpText>
    <label>Shop fit cap</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>