force-app/main/default/objects/Contract/fields/Shop_Fit_Cap_gross__c.field-meta.xml
<CustomField>
    <fullName>Shop_Fit_Cap_gross__c</fullName>
    <formula>IF( Shop_fit_cap_value__c  &gt; 0,  Shop_fit_cap_value__c ,  IF( Shop_fit_cap__c  &gt; 0,  Shop_fit_cap__c  *   Size_GEA__c , 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If a value for the cap is entered it takes preference otherwise the capping amount per village metric if present will be used otherwise the shop fit contribution will not be capped</inlineHelpText>
    <label>Shop Fit Cap (gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>