force-app/main/default/objects/Contract/fields/Shop_fit_cap_value__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_cap_value__c</fullName>
    <inlineHelpText>Enter the shop fit cap if it&apos;s an absolute value</inlineHelpText>
    <label>Shop fit cap value</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>