force-app/main/default/objects/Contract/fields/Shop_fit_contribution_gross__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_contribution_gross__c</fullName>
    <formula>IF( Shop_fit_cost__c  &gt; 0,  ( Shop_fit_cost__c  * Size_GEA__c )   *  Shop_fit_Contribution_percent__c ,  (Village__r.Std_Shop_Fit_Cost__c  * Size_GEA__c) *  Shop_fit_Contribution_percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated Shop fit contribution as (Village Shop fit cost * Unit Size) * Shopfit contribution %</inlineHelpText>
    <label>Shop fit contribution (gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>