force-app/main/default/objects/Contract/fields/Shop_fit_contribution_net__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_contribution_net__c</fullName>
    <formula>IF(AND(Shop_fit_contribution_gross__c &gt; Shop_Fit_Cap_gross__c, Shop_Fit_Cap_gross__c  &gt; 0) , Shop_Fit_Cap_gross__c ,  Shop_fit_contribution_gross__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The net shop fit contribution capped based on either the fixed amount or the cap per square metre</inlineHelpText>
    <label>Shop fit contribution (net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>