force-app/main/default/objects/Contract/fields/Shop_fit_Contribution_percent__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_Contribution_percent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the shopfit contribution percentage payable to the tenant by the landlord</inlineHelpText>
    <label>Shop fit Contribution (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>