force-app/main/default/objects/Contract/fields/Shop_fit_cost__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_cost__c</fullName>
    <defaultValue>15000</defaultValue>
    <inlineHelpText>Enter the shop fit cost per village metric when known, if this is left blank or zero then the default value for the village will be used to calculate the net shop fit contribution</inlineHelpText>
    <label>Shop fit cost</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>