force-app/main/default/objects/Contract/fields/Shop_fit_cost_gross__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_cost_gross__c</fullName>
    <formula>Size_GEA__c *  Shop_fit_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total estimated shop fit cost (Unit Size * Shop fit cost per square metre)</inlineHelpText>
    <label>Shop fit cost (gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>