force-app/main/default/objects/Contract/fields/Shop_fit_net__c.field-meta.xml
<CustomField>
    <fullName>Shop_fit_net__c</fullName>
    <formula>IF(  Size_GEA__c &lt;&gt; 0, Shop_fit_contribution_net__c  /   Size_GEA__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net shop fit contribution per village metric</inlineHelpText>
    <label>Shop fit net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>