force-app/main/default/objects/Contract/fields/Size_GEA__c.field-meta.xml
<CustomField>
    <fullName>Size_GEA__c</fullName>
    <formula>IF( ISPICKVAL( Size_Metric__c , &quot;sq.m&quot;),  Unit_Size__c ,  Unit_Size_sqft__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size_GEA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>