force-app/main/default/objects/Contract/fields/Size_Metric__c.field-meta.xml
<CustomField>
    <fullName>Size_Metric__c</fullName>
    <inlineHelpText>Select the size metric being used to calculate Base Rent, Service Charges or Management Fee and Deposit Amounts</inlineHelpText>
    <label>Size Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sq.m</fullName>
            </value>
            <value>
                <fullName>sq.ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>