force-app/main/default/objects/Contract/fields/Size_sqft__c.field-meta.xml
<CustomField>
    <fullName>Size_sqft__c</fullName>
    <formula>IF(ISPICKVAL( Service_Charge_Fee_Basis__c , &quot;GEA&quot;),  Unit_Size_sqft__c  ,  Unit_GIA_sqft__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>