force-app/main/default/objects/Contract/fields/Size_sqm__c.field-meta.xml
<CustomField>
    <fullName>Size_sqm__c</fullName>
    <formula>IF(ISPICKVAL(  Service_Charge_Fee_Basis__c , &quot;GEA&quot;), Unit_Size__c ,  Unit_GIA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>