force-app/main/default/objects/Contract/fields/Std_Required_TOR__c.field-meta.xml
<CustomField>
    <fullName>Std_Required_TOR__c</fullName>
    <formula>Village__r.Std_Required_ToR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Standard required TOR specific to this village</inlineHelpText>
    <label>Std Required TOR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>