force-app/main/default/objects/Contract/fields/T_O_Rent_Payable_From__c.field-meta.xml
<CustomField>
    <fullName>T_O_Rent_Payable_From__c</fullName>
    <inlineHelpText>Select the date that turnover rent is payable from</inlineHelpText>
    <label>T/O Rent Payable From</label>
    <type>Date</type>
</CustomField>