force-app/main/default/objects/Contract/fields/Tenant_Break_Rights__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Break_Rights__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <inlineHelpText>Enter any specific breaks rights accorded to the tenant under the terms of this lease</inlineHelpText>
    <label>Tenant Break Rights</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>