force-app/main/default/objects/Contract/fields/Tenant_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Guarantor__c</fullName>
    <defaultValue>&quot;TBC&quot;</defaultValue>
    <inlineHelpText>Enter the name of the guarantor for this lease</inlineHelpText>
    <label>Tenant Guarantor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>