force-app/main/default/objects/Contract/fields/Tenant_Nominee__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Nominee__c</fullName>
    <defaultValue>&quot;TBC&quot;</defaultValue>
    <inlineHelpText>The name of the individual nominated by the Tenant with the power to sign official documents</inlineHelpText>
    <label>Tenant Nominee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>