force-app/main/default/objects/Contract/fields/Term_Clause__c.field-meta.xml
<CustomField>
    <fullName>Term_Clause__c</fullName>
    <inlineHelpText>Enter the details of the term in the form you wish to see on official documents</inlineHelpText>
    <label>Term Clause</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>