force-app/main/default/objects/Contract/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <inlineHelpText>Select the description of the terms for this deal, this setting is used to determine steps in the contract approval process</inlineHelpText>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Non Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>