force-app/main/default/objects/Contract/fields/TI_Budgetted__c.field-meta.xml
<CustomField>
    <fullName>TI_Budgetted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate if the entire amount of Tenant Incentive plus Shop fit contribution has been budgetted</inlineHelpText>
    <label>TI Budgetted?</label>
    <type>Checkbox</type>
</CustomField>