force-app/main/default/objects/Contract/fields/TI_Status__c.field-meta.xml
<CustomField>
    <fullName>TI_Status__c</fullName>
    <inlineHelpText>Select the appropriate value describing the current status of the tenant incentive contribution</inlineHelpText>
    <label>TI Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Predicted</fullName>
            </value>
            <value>
                <fullName>Intended</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>