force-app/main/default/objects/Contract/fields/TI_Total__c.field-meta.xml
<CustomField>
    <fullName>TI_Total__c</fullName>
    <formula>Shop_fit_contribution_net__c  +  Additional_TI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total TI, the net Shop Fit amount plus the additional TI amount</inlineHelpText>
    <label>TI Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>