force-app/main/default/objects/Contract/fields/ToR_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>ToR_Calculation_Method__c</fullName>
    <inlineHelpText>Select the method to use when calculating Turnover Rent</inlineHelpText>
    <label>ToR Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Total</fullName>
                <default>true</default>
                <label>On Total</label>
            </value>
            <value>
                <fullName>On Increment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>