force-app/main/default/objects/Contract/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <formula>Base_Rent_on_Completion__c  +  Service_Charge_on_Completion__c  +  Insurance_on_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>