force-app/main/default/objects/Contract/fields/Total_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit__c</fullName>
    <formula>Balance_on_Signing_Lease__c  +  Deposit_on_Signing_HoT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>